# docx-comments

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  conductor.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/docx_comments/: __init__.py  anchors.py  manager.py  models.py  system_author.py  xml_parts.py
tests/: __init__.py  test_basic.py  test_editing.py  test_manager_basic.py  test_migration.py  test_models.py  test_people.py  test_threads.py  test_xml.py
